--- a/css/style.css
+++ b/css/style.css
@@ -128,9 +128,7 @@ input[type="checkbox"]:checked::after {
     padding: 0.25rem;
     border: 2px solid var(--wp--preset--color--primary);
     box-shadow: var(--wp--custom--shadow);
-    display: flex;
-    justify-content: center; /* centers left/right */
-    align-items: center;     /* centers up/down */
+    display: flex
 }
 
 .site-header-inner {
