--- a/css/style.css
+++ b/css/style.css
@@ -569,6 +569,18 @@ select:hover {
     background: #025aa5;
 }
 
+.item-title {
+    font-weight: bold;
+    margin-bottom: 6px;
+    color: #fff;
+}
+
+.qty-row {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
 /* Load more */
 #loadMore {
     display: block;
